--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "init": "^0.1.2",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
+    "sequelize-cli": "^6.6.2",
     "uuid": "^9.0.1",
     "xss-clean": "^0.1.4"
   },
