--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,18 @@
+# Konfigurasi Database
+
 DB_HOST=localhost
 DB_USER=nama_pengguna
 DB_PASSWORD=kata_sandi
 DB_NAME=nama_database
+
+# Port untuk menjalankan aplikasi
+PORT=3000
+
+# Secret key untuk JWT
+SECRET_KEY=secret_key
+
+# Cloudinary
+
+CLOUD_NAME=nama_cloudinary
+API_KEY=api_key
+API_SECRET=api_secret
