--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,24 @@
 # Konfigurasi Database
 
-DB_HOST=localhost
-DB_USER=nama_pengguna
-DB_PASSWORD=kata_sandi
+DB_HOST=nama_host
+DB_USER=nama_user
+DB_PASSWORD=password
 DB_NAME=nama_database
+DB_PORT=port_database
+
+# Konfigurasi Database development
+NODE_ENV=development
+
 
 # Port untuk menjalankan aplikasi
 PORT=3000
 
 # Secret key untuk JWT
-SECRET_KEY=secret_key
+SECRET_KEY_JWT=secret_key
 
 # Cloudinary
 
-CLOUD_NAME=nama_cloudinary
-API_KEY=api_key
-API_SECRET=api_secret
+#Cloudinary
+CLOUD_NAME = "cloudinary_name"
+CLOUD_API_KEY = "api_key"
+CLOUD_API_SECRET = "api_secret"
